--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "gulp": "^3.9.1",
     "rxjs": "~6.3.3",
+    "startbootstrap-simple-sidebar": "^4.1.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
