--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
+    "jquery": "^3.3.1",
     "rxjs": "~6.3.3",
     "startbootstrap-simple-sidebar": "^4.1.1",
     "tslib": "^1.9.0",
